Customize tree items via settings.view.addDiyDom. Append a colorable div or icon to each tree entry. Map entity ids to those divs in the codeCovDivs map. Add css rules for appended elements.

--- a/ui/scripts/PackageExplorer/zt.css
+++ b/ui/scripts/PackageExplorer/zt.css
@@ -94,3 +94,19 @@
     border-color: #e5e5e5;
 }
 
+.coloredCircle {
+	display: inline-block;
+	width: 1rem;
+	height: 1rem;
+	border-radius: 50vh;
+	margin: 0.25rem;
+	margin-bottom: -0.25rem;
+}
+
+.coloredImg {
+	display: inline-block;
+	width: 1rem;
+	height: 1rem;
+	margin: 0.25rem;
+	margin-bottom: -0.25rem;
+}
